# FractalAnimation

./: .gitignore  CMakeLists.txt  README.md  fractalparams.h  fractalwidget.cpp  fractalwidget.h  fractalworker.cpp  fractalworker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
